// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cherrypickAndCreateTargetPullRequest when cherry-picking fails calls exec correctly 1`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git fetch elastic 6.x && git checkout -B backport/6.x/commit-mySha elastic/6.x --no-track",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git rev-list -1 --merges mySha~1..mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick -x mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git commit --no-edit",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren_authenticated backport/6.x/commit-mySha:backport/6.x/commit-mySha --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git reset --hard && git checkout myDefaultSourceBranch && git branch -D backport/6.x/commit-mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
]
`;

exports[`cherrypickAndCreateTargetPullRequest when commit has a pull request reference should make correct git commands 1`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git fetch elastic 6.x && git checkout -B backport/6.x/pr-1000_pr-2000 elastic/6.x --no-track",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git rev-list -1 --merges mySha~1..mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick -x mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git rev-list -1 --merges mySha2~1..mySha2",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick -x mySha2",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren_authenticated backport/6.x/pr-1000_pr-2000:backport/6.x/pr-1000_pr-2000 --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git reset --hard && git checkout myDefaultSourceBranch && git branch -D backport/6.x/pr-1000_pr-2000",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
]
`;
